tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_36.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((((y - 1) + (y - 1)) + (- (x MOD 200))) = (+ ((+ y) MOD (y - y))));
               z := ((((- 2) - (- y)) * ((- 1) * (- 2))) + (((- 1) - (1 MOD z)) + (+ (+ y))));
               r := ((((p OR q) OR (p & p)) OR ((y - 1223) < (200 - y))) & ((+ (x - 0)) # (- (1 - 200))));
               p := ((((z * 1223) - (x - y)) MOD ((200 - y) - (y MOD 0))) > (((y + 2) * (y - 200)) * ((0 MOD 1223) DIV (1 + 0))));
               z := ((((1 + z) MOD (0 DIV 0)) - ((200 MOD 200) - (200 - z))) - (((y - z) - (x + x)) DIV ((+ 1) * (y MOD z))));
               r := ((+ ((- 0) - (y * z))) # (+ (+ (1223 MOD 1223))));
               z := ((+ (- (2 MOD 0))) DIV (((1 * 0) - (z * 1223)) DIV ((+ 0) + (- 1))));
  (* error *)  z := ((((+ r) MOD (- 1)) DIV (+ (2 MOD 0))) - ((- (+ 1223)) - ((2 MOD z) MOD (- 1))));
               p := (((+ (x DIV 0)) >= (+ (- 1))) & (~ (~ (0 > y))));
               p := (~ (((x + 2) - (2 + 0)) # (- (1 * 1223))))
END Test18.